fixing spacing

--- a/jennifer/css/fira.css
+++ b/jennifer/css/fira.css
@@ -14,7 +14,6 @@ h2 {
 	font-size: 35px !important;
 	font-weight: 500 !important;
 	font-family: 'Fira Sans', sans-serif; !important;
-	padding-bottom: 15px !important;
 	padding-top: 20px !important;
 }
 
@@ -25,7 +24,7 @@ h3 {
 	font-weight: 500 !important;
 	font-family: 'Fira Sans', sans-serif;
 	padding-bottom: 10px !important;
-	margin-top: 20px !important;
+	margin-top: 30px !important;
 
 }
 
